// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Tooltip Default 1`] = `
<button
  className="Tooltipstories__Button-j9k610-0 cAmMZI"
  data-reach-tooltip-trigger=""
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  type="button"
>
  Hover me
</button>
`;

exports[`Storyshots Molecules | Tooltip Integration: With Drawer and Modal 1`] = `
<portal-dummy>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onScrollCapture={[Function]}
      onTouchMoveCapture={[Function]}
      onWheelCapture={[Function]}
    >
      <div>
        <div
          className="Drawer__TitleWrapper-sc-1ebdzul-4 iBLwhJ"
          onTouchStart={[Function]}
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kJslgx Drawer__CloseButton-sc-1ebdzul-1 iHARyV"
            onClick={[Function]}
            type="button"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              <svg
                aria-hidden="false"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="CrossThin__StyledPath-sc-1a8pgle-0 jFUCAe"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this drawer
                </title>
              </svg>
            </span>
          </button>
        </div>
        <div
          className="Drawer__Content-sc-1ebdzul-2 bboXsW"
        >
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
          >
            <button
              className="Tooltipstories__Button-j9k610-0 cAmMZI"
              data-reach-tooltip-trigger=""
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
            >
              Hover me
            </button>
          </div>
          <button
            className="Tooltipstories__Button-j9k610-0 cAmMZI"
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</portal-dummy>
`;

exports[`Storyshots Molecules | Tooltip With position defined 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      bottom
    </div>
    <div>
      <button
        className="Tooltipstories__Button-j9k610-0 cAmMZI"
        data-reach-tooltip-trigger=""
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        type="button"
      >
        Hover me
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      left
    </div>
    <div>
      <button
        className="Tooltipstories__Button-j9k610-0 cAmMZI"
        data-reach-tooltip-trigger=""
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        type="button"
      >
        Hover me
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      top
    </div>
    <div>
      <button
        className="Tooltipstories__Button-j9k610-0 cAmMZI"
        data-reach-tooltip-trigger=""
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        type="button"
      >
        Hover me
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      right
    </div>
    <div>
      <button
        className="Tooltipstories__Button-j9k610-0 cAmMZI"
        data-reach-tooltip-trigger=""
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        type="button"
      >
        Hover me
      </button>
    </div>
  </div>
</div>
`;
